--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-util": "3.x.x",
     "gulp-webpack-build": "0.x.x",
     "json-loader": "^0.5.1",
+    "lodash": "^4.17.2",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.9",
     "typings": "^0.7.9",
